<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="shoe"
            type="com.perlovka.shoeStore.models.Shoes" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:id="@+id/detail_layout"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="3dp"
        app:cardElevation="2dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context="com.perlovka.shoeStore.screens.shoeList.DetailFragment">

            <TextView
                android:id="@+id/label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_text"
                android:text="@string/shoe_details"
                android:fontFamily="@font/space_mono"
                android:textSize="@dimen/text_label_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/detail_image"
                android:layout_width="0dp"
                android:layout_height="200dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label"
                app:srcCompat="@drawable/detail_image"
                android:contentDescription="@string/content_description_media" />

            <EditText
                android:id="@+id/shoe_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/space_mono"
                android:hint="@string/shoe_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:padding="@dimen/padding_text"
                android:text="@={shoe.name}"
                android:textSize="@dimen/text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_image" />

            <EditText
                android:id="@+id/company"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:padding="@dimen/padding_text"
                android:hint="@string/company"
                android:fontFamily="@font/space_mono"
                android:text="@={shoe.company}"
                android:textSize="@dimen/text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shoe_name" />

            <EditText
                android:id="@+id/shoe_size"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/shoe_size"
                android:inputType="number"
                android:minHeight="48dp"
                android:padding="@dimen/padding_text"
                android:fontFamily="@font/space_mono"
                android:text="@={shoe.size}"
                android:textSize="@dimen/text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/company"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:minHeight="48dp"
                android:padding="@dimen/padding_text"
                android:hint="@string/description"
                android:fontFamily="@font/space_mono"
                android:text="@={shoe.description}"
                android:inputType="text"
                android:textSize="@dimen/text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shoe_size"
                android:autofillHints="" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/save"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/space_mono"
                android:text="@string/save"
                android:textAppearance="
            @style/TextAppearance.MaterialComponents.Headline6"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@+id/description"
                app:layout_constraintTop_toBottomOf="@+id/description" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel"
                android:fontFamily="@font/space_mono"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textAppearance="
            @style/TextAppearance.MaterialComponents.Headline6"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@+id/save"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/save"
                app:layout_constraintTop_toTopOf="@+id/save" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>