<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/welcome_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context="com.perlovka.shoeStore.screens.onboarding.WelcomeFragment">

        <TextView
            android:id="@+id/welcome_prat1_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:paddingStart="@dimen/padding"
            android:paddingEnd="@dimen/padding"
            android:text="@string/welcome_content"
            android:textColor="@color/white_text_color"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/welcome_prat2_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/welcome_prat2_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:paddingStart="@dimen/padding"
            android:paddingEnd="@dimen/padding"
            android:text="@string/welcome_content2"
            android:textColor="@color/white_text_color"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_prat1_text" />

        <Button
            android:id="@+id/welcome_button"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginStart="@dimen/start_margin"
            android:layout_marginEnd="@dimen/end_margin"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/white_text_color"
            android:fontFamily="@font/lato"
            android:text="@string/welcome_button"
            android:textColor="@color/black_text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_prat1_text"
            app:layout_constraintVertical_bias="0.836" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>