<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- ConstraintLayout in this case allows to place the views in a convenient way, when every
 one is related to each other and to not  distort the views in the layout when configuration changes -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <TextView
            android:id="@+id/instruction_content_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:paddingStart="@dimen/padding"
            android:paddingEnd="@dimen/padding"
            android:text="@string/instruction_content"
            android:textColor="@color/white_text_color"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/instruction_action_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/instruction_action_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/lato"
            android:paddingStart="@dimen/padding"
            android:paddingEnd="@dimen/padding"
            android:text="@string/instruction_text_content"
            android:textColor="@color/white_text_color"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instruction_content_text"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/instruction_button"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginStart="@dimen/start_margin"
            android:layout_marginEnd="@dimen/end_margin"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/white_text_color"
            android:fontFamily="@font/lato"
            android:text="@string/instruction_button"
            android:textColor="@color/black_text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instruction_content_text"
            app:layout_constraintVertical_bias="0.836" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>